# play-bracket-django-host

./: README.md  pyproject.toml
playbracket_django/: manage.py
playbracket_django/playbracket_django/: asgi.py  settings.py  urls.py  wsgi.py
