[tool.poetry]
name = "play-bracket-django"
version = "0.1.0"
description = ""
authors = ["Roberto Himmelbauer <robertoh89@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
play-bracket-api = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
